@@ -1,5 +1,7 @@
 Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
 
+- do not try to probe monitor information via X server on laptops (it
+  doesn't work with recent X servers)
 - add support for Asturian keyboard
 - prefer boot display devices when probing cards (fixes at least an issue
   with an SLI laptop as reported by Maarten Vanraes)
